Added 'Wager' heading to all game days on game index

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -26,7 +26,7 @@
       <th>Away Team</th>
       <th>Home Team</th>
       <th>Spread</th>
-      <th></th>
+      <th>Wager</th>
       <th></th>
     </tr>
 
@@ -46,7 +46,7 @@
       <th>Away Team</th>
       <th>Home Team</th>
       <th>Spread</th>
-      <th></th>
+      <th>Wager</th>
       <th></th>
     </tr>
 
