Changed 'Back' link on leaderboard to a bright green button

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Games for Week <%= Date.current.cweek - 35 %></h1>
+<h1>Games for Current Week</h1>
 <hr>
 <div class="table-spacing">
   <table>
