Changed all back links to default grey buttons

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -27,4 +27,4 @@
   <% end %>
 </table>
 <br>
-<%= link_to "Back", games_path, class: "btn btn-success" %>
+<%= link_to "Back", games_path, class: "btn" %>
