--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,7 @@
 
 <% for user in @users %>
   <tr>
-    <td><%= user.username %></td>
+    <td><%= user.profile_name %></td>
     <td><%= link_to 'Picks', user_picks_path(user) %></td>
   </tr>
 <% end %>
