--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,7 +41,7 @@ background: white;
 }
 
 .main-inner a:hover {
-	color: #f0f0f0;
+	color: #1dd2af;
   text-decoration: none;
 }
 
@@ -69,7 +69,7 @@ h2 {
 
 
 .user-highlight {
-    background-color: lightblue;
+    background-color: #2c3e50;
   }
 
 .btn {
