Updated buttons CSS

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -27,4 +27,4 @@
   <% end %>
 </table>
 <br>
-<%= link_to "Back To This Week's Games", games_path, class: "btn" %>
+<%= link_to "Back To This Week's Games", games_path, class: "btn btn-primary" %>
