Changed nav to fixed. Added styling to tables. Tweaked layout

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,13 +1,14 @@
 <h1>This Week's Games</h1>
 <hr>
 <div class="table-spacing">
-  <table>
+  <table class="table-bordered table-striped table-hover">
     <tr>
       <th>Date</th>
       <th>Away Team</th>
       <th>Home Team</th>
       <th>Spread</th>
       <th>Wager</th>
+
     </tr>
 
     <h4>Thursday's games</h4>
@@ -20,14 +21,13 @@
     <% end %>
   </table>
 
-  <table>
+  <table class="table-bordered table-striped table-hover">
     <tr>
       <th>Date</th>
       <th>Away Team</th>
       <th>Home Team</th>
       <th>Spread</th>
       <th>Wager</th>
-      <th></th>
     </tr>
 
     <h4>Sunday's games</h4>
@@ -40,14 +40,13 @@
     <% end %>
   </table>
 
-  <table>
+  <table class="table-bordered table-striped table-hover">
     <tr>
       <th>Date</th>
       <th>Away Team</th>
       <th>Home Team</th>
       <th>Spread</th>
       <th>Wager</th>
-      <th></th>
     </tr>
 
     <h4>Monday's games</h4>
