--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>All Users</h1>
 <hr>
-<table>
+<table class="table-bordered table-striped table-hover">
   <tr>
     <th>Name</th>
     <th>Picks</th>
