--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -1,6 +1,6 @@
 <h1>Points Leaderboard</h1>
 <hr>
-<table>
+<table class="table-bordered table-striped table-hover">
   <tr>
     <th>Rank</th>
     <th>Name</th>
