--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -6,12 +6,6 @@ td {
   text-align: center;
 }
 
-td:not(:last-child)
-{
-    border-right:solid;
-    border-width:1px;
-}
-
 h4 {
   text-align: center;
   padding-top: 20px;
@@ -39,7 +33,8 @@ table {
     margin-right:auto;
   }
 
-tr:nth-child(2n+2) {
-  background-color: #F0F0F0;
+th {
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
