--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= favicon_link_tag %>
 </head>
 <body>
-		<div class="navbar">
+		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner main-inner">
 				<div class="container">
 					<% if current_page? new_user_session_path %>
@@ -52,9 +52,8 @@
 
 
 		<div class="row">
-			<div class="span1">
-			</div>
-			<div class="span10">
+
+			<div id="main-content">
 				<% flash.each do |type, message| %>
 					<div class="alert <%= flash_class type %>">
 						<button class="close" data-dismiss="alert">x</button>
