Lowered position of main hero

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
   vertical-align: center;
   box-shadow: 0 0 40px rgba(0,0,0,0.1) inset;
   margin-bottom: -80px;
+  margin-top: 20px;
 }
 
 .hero-unit a, .hero-unit {
