Added total points wagered to pick create/edit view

--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -11,6 +11,9 @@
     <%= f.hidden_field :date, value: Date.current %>
 
   </div>
+  <div id="float-right">
+    <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
+  </div>
 
   <div class="form-actions">
     <% if @game.date <= Date.current %>
