Added kaminari gem, implemented it on games index

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -19,6 +19,7 @@
       <% @games.each do |game| %>
         <%= render 'game_tr', game: game %>
       <% end %>
+      <%= paginate @games %>
     <% else %>
       <h4>Thursday's games</h4>
       <% @games.each do |game| %>
