--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,7 @@
 								<li><a href="#">0 Points</a></li>
 							<% end%>
 							<li><%= link_to 'Leaderboard', user_leaderboard_path(current_user.id) %></li>
+							<li><%= link_to 'Forum', 'http://replacements.boards.net' %></li>
 							<li><%= link_to "Log out", logout_path %></li>
 						<% else %>
 
