--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -14,7 +14,7 @@
 
     <tr>
       <% if current_user.admin? %>
-        <td><%= link_to pick.wager, new_game_pick_path(pick.game_id) %></td>
+        <td><%= link_to pick.wager, new_game_pick_path(Pick.find_by(user_id: :user_id).game_id) %></td>
       <% else %>
         <td><%= pick.wager %></td>
       <% end %>
