--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -1,22 +1,18 @@
-<%= simple_form_for([@game, @pick], html: {class: "form-horizontal"}) do |f| %>
+<%= simple_form_for(pick_resource, html: {class: "form-horizontal"}) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :pick_team_id, label: false, :include_blank => false, collection: [@game.team_one, @game.team_two], label_method: :name, as: :radio_buttons %>
+    <%= f.input :pick_team_id, label: false, include_blank: false, collection: [game.team_one, game.team_two], label_method: :name, as: :radio_buttons %>
     <% if current_user.admin? %>
       <%= f.input :wager, label: 'Points', collection: 25..800, :include_blank => false %>
     <% else %>
       <%= f.input :wager, label: 'Points', collection: 25..300, :include_blank => false %>
     <% end %>
-    <%= f.hidden_field :date, value: Date.current %>
+  </div>
 
-  </div>
-  <div id="float-right">
-    <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
-  </div>
 
   <div class="form-actions">
-    <% if @game.date <= Date.current %>
+    <% if game.date <= Date.current %>
 
       <% if current_user.admin? %>
         <%= f.button :submit, class: "btn btn-success" %>
@@ -26,6 +22,9 @@
 
     <% else %>
         <%= f.button :submit, class: "btn btn-success" %>
+        <div id="float-right">
+          <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
+        </div>
     <% end %>
   </div>
 <% end %>
