--- a/app/views/picks/edit.html.erb
+++ b/app/views/picks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing pick</h1>
 
-<%= render 'form' %>
+<%= render 'form', pick_resource: @pick, game: @game %>
 
 
-<%= link_to 'Back', games_path, class: "btn"  %>
+<%= link_to 'Back', user_picks_path(current_user), class: "btn"  %>
