Changed back button link in picks index to improve workflow for users

--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -43,5 +43,5 @@
 
 <br />
 
-<%= link_to 'Back', :back, class: "btn btn-primary" %>
+<%= link_to 'Back', user_leaderboard_path(current_user), class: "btn btn-primary" %>
 
