--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -21,10 +21,10 @@
       <% end %>
 
     <% else %>
-        <%= f.button :submit, class: "btn btn-success" %>
-        <div id="float-right">
-          <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
-        </div>
+      <%= f.button :submit, class: "btn btn-success" %>
+      <div>
+        <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
+      </div>
     <% end %>
   </div>
 <% end %>
