Re-added div class to picks form partial

--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -22,7 +22,7 @@
 
     <% else %>
       <%= f.button :submit, class: "btn btn-success" %>
-      <div>
+      <div id="float-right">
         <h4>Total points wagered this week: <%= @pick.user.weekly_wagers %></h4>
       </div>
     <% end %>
