Changed back button on pick edit to link to :back

--- a/app/views/picks/edit.html.erb
+++ b/app/views/picks/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', pick_resource: @pick, game: @game %>
 
 
-<%= link_to 'Back', user_picks_path(current_user), class: "btn"  %>
+<%= link_to 'Back', :back, class: "btn"  %>
