--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,9 @@
 					<ul class="nav pull-right">
 
 						<% if user_signed_in? %>
+							<% if current_user.admin? %>
+								<li><%= link_to "Admin", rails_admin_path %></li>
+							<% end %>
 							<li><%= link_to current_user.first_name, edit_user_registration_path %></li>
 							<% if current_user.user_points != nil %>
 								<li><%= link_to "#{current_user.user_points} Points", user_leaderboard_path(current_user.id) %></li>
