--- a/app/views/picks/_satsunform.html.erb
+++ b/app/views/picks/_satsunform.html.erb
@@ -12,7 +12,7 @@
 
   <div class="form-actions">
     <% if game.date.to_time.wday == 0 %>
-      <% if game.date.in_time_zone > 1.day.from_now %>
+      <% if game.date.in_time_zone < 1.day.from_now %>
         <% if current_user.admin? %>
           <%= f.button :submit, class: "btn btn-success" %>
         <% else %>
@@ -27,7 +27,7 @@
 
     <% elsif game.date.to_time.wday == 1 %>
 
-      <% if game.date.in_time_zone > 2.days.from_now %>
+      <% if game.date.in_time_zone < 2.days.from_now %>
         <% if current_user.admin? %>
           <%= f.button :submit, class: "btn btn-success" %>
         <% else %>
