--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div class="form-actions">
-    <% if game.date <= Date.current %>
+    <% if game.date < Date.current %>
 
       <% if current_user.admin? %>
         <%= f.button :submit, class: "btn btn-success" %>
