Reverted change to Thanksgiving and Thursday game pick cutoffs

--- a/app/views/picks/_form.html.erb
+++ b/app/views/picks/_form.html.erb
@@ -13,14 +13,14 @@
   </div>
 
   <div class="form-actions">
-    <% if game.date <= Date.current %>
+    <% if game.date < Date.current %>
 
       <% if current_user.admin? %>
         <%= f.button :submit, class: "btn btn-success" %>
       <% else %>
         <h3>Picks are now closed for this game</h3>
       <% end %>
-    <% elsif game.bonus? && game.date < Date.current %>
+    <% elsif game.bonus? && game.date <= Date.current %>
       <h3>Picks are now closed for this game</h3>
     <% else %>
       <%= f.button :submit, class: "btn btn-success" %>
