--- a/app/views/picks/index.html.erb
+++ b/app/views/picks/index.html.erb
@@ -24,7 +24,7 @@
       <td><%= Game.find_by(id: pick.game_id).team_one.name %></td>
     </tr>
 
-  <% elsif (pick.game.date.beginning_of_week < Date.current.beginning_of_week) %>
+  <% elsif (pick.game.date < Date.current) %>
       <tr>
         <% if current_user.admin? %>
           <% @game = Game.find_by(id: pick.game_id) %>
