Added id to leaderboard div. Added CSS to second column of leaderboard to improve width

--- a/app/views/users/leaderboard.html.erb
+++ b/app/views/users/leaderboard.html.erb
@@ -1,6 +1,6 @@
 <h1>Points Leaderboard</h1>
 <hr>
-<table class="table-bordered table-striped table-hover">
+<table class="table-bordered table-striped table-hover" id="leaderboard-spacing">
   <tr>
     <th>Rank</th>
     <th>Name</th>
