--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,5 +79,8 @@ h2 {
   border-top: 90px solid transparent;
 }
 
-
-
+#leaderboard-spacing th:nth-child(-2n+2) {
+  min-width: 190px ;
+}{
+  min-width: 400px;
+}
