--- a/app/views/games/_game_tr.html.erb
+++ b/app/views/games/_game_tr.html.erb
@@ -4,12 +4,12 @@
 
   <% if game.picks.find_by(user_id: current_user.id) != nil %>
     <% if game.picks.find_by(user_id: current_user.id).pick_team_id == game.team_two_id %>
-      <td><strong><%= game.team_two.name %></strong></td>
+      <td><div class="pulse"><strong><%= game.team_two.name %></strong></div></td>
       <td><%= game.team_one.name %></td>
 
     <% else %>
       <td><%= game.team_two.name %></td>
-      <td><strong><%= game.team_one.name %></strong></td>
+      <td><div class="pulse"><strong><%= game.team_one.name %></strong></div></td>
     <% end %>
 
   <% else %>
